--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -1,29 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".HistoryActivity"
-    android:weightSum="1">
+    android:background="@color/white"
+    android:layout_marginTop="?attr/actionBarSize"
+    tools:context=".HistoryActivity">
     <TextView
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:text="RESERVATION HISTORY"
         android:textSize="25dp"
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
+        android:background="@color/white"
+        android:textColor="@color/black"
         android:id="@+id/textView44"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/list_view"
         android:layout_marginStart="13dp" />
 
     <ListView
+        app:layout_constraintTop_toBottomOf="@id/textView44"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/list_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@color/white"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_height="360dp" />
+        android:layout_height="0dp" />
 
 
     <!--<ImageButton
@@ -45,4 +56,4 @@
         android:layout_alignTop="@+id/homeB"
         android:layout_alignParentEnd="true"
         android:background="@mipmap/next" />-->
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
