--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:padding="10dp"
     android:background="@color/white"
+    android:layout_marginTop="?attr/actionBarSize"
     android:layout_height="match_parent"
     tools:context=".ActivityProfile">
     <androidx.constraintlayout.widget.ConstraintLayout
