--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -4,12 +4,12 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     >
+
     <AutoCompleteTextView android:id="@+id/autoCompleteTextView1"
-        android:layout_width="wrap_content"
+        android:layout_below="@+id/tv1"
+        android:layout_width="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="54dp"
         android:ems="10"
         xmlns:android="http://schemas.android.com/apk/res/android" />
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
