--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -8,6 +8,7 @@
     <AutoCompleteTextView android:id="@+id/autoCompleteTextView1"
         android:layout_below="@+id/tv1"
         android:layout_width="match_parent"
+        android:backgroundTint="@color/white"
         android:layout_marginTop="?attr/actionBarSize"
         android:layout_height="wrap_content"
         android:ems="10"
