--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,15 +10,37 @@
             android:id="@+id/nav_home"
             android:iconTint="@color/black"
             android:icon="@drawable/ic_home_black_24dp"
-            android:title="Home"/>
+            android:title="Find Parking"/>
+        <item
+            android:id="@+id/nav_profile"
+            android:icon="@drawable/ic_profile"
+            android:title="Profile"/>
+        <!--<item
+            android:id="@+id/nav_bookings"
+            android:icon="@drawable/ic_profile"
+            android:title="My Bookings"/>-->
+
+        <item
+            android:id="@+id/nav_reserve"
+            android:iconTint="@color/black"
+            android:icon="@drawable/ic_baseline_add_circle_24"
+            android:title="Reserve"/>
+        <item
+            android:id="@+id/nav_payment"
+            android:iconTint="@color/black"
+            android:icon="@drawable/ic_baseline_payment_24"
+            android:title="Payment"/>
         <item
             android:id="@+id/nav_history"
             android:icon="@drawable/ic_schedule_black_24dp"
             android:title="History"/>
         <item
-            android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_profile"
-            android:title="Profile"/>
+            android:id="@+id/nav_pricing"
+            android:iconTint="@color/black"
+            android:icon="@drawable/ic_baseline_attach_money_24"
+            android:title="Pricing"/>
+
+
         <item
             android:id="@+id/nav_help"
             android:icon="@drawable/ic_email_black_24dp"
