--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -30,6 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/list_view"
+        android:layout_margin="20dp"
         android:layout_width="match_parent"
         android:background="@color/white"
         android:layout_centerVertical="true"
