--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/primaryColor"
     tools:context=".MainActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header_layout"
@@ -43,7 +43,7 @@
             />
         <TextView
             android:text="Park your vehicle safely"
-            android:background="@color/white"
+            android:background="@drawable/round_white"
             android:padding="10dp"
             android:textColor="@color/black"
             android:id="@+id/text2"
@@ -60,6 +60,7 @@
         android:id="@+id/main_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@drawable/round_top_white"
         app:layout_constraintVertical_weight="6"
         app:layout_constraintCircleRadius="10dp"
         app:layout_constraintTop_toBottomOf="@id/header_layout"
@@ -71,7 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <LinearLayout
-                android:background="@color/white"
+                android:id="@+id/ll"
                 android:layout_width="match_parent"
                 android:orientation="vertical"
                 android:padding="20dp"
