--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -210,7 +210,7 @@
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="5dp"
                         android:textAlignment="center"
-                        android:background="#000000"
+                        android:background="@color/primaryColor"
                         android:padding="10dp"
                         android:text="GO"
                         android:textColor="#fff"
