--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="?attr/actionBarSize"
     android:background="@color/white"
+    android:id="@+id/ll"
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/textView"
