--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -4,11 +4,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:gravity="center"
+    android:orientation="vertical"
     android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/balanceText"
+        android:text="Your remaining balance"
+        android:gravity="center"
+        android:textSize="15sp"
+        android:textColor="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:visibility="gone"
         android:layout_marginBottom="20dp"
         android:orientation="vertical">
 
